--- a/UM/src/main/resources/settings.properties
+++ b/UM/src/main/resources/settings.properties
@@ -3,4 +3,5 @@ connection.url=jdbc:hsqldb:file:db/UM
 connection.user=sa
 connection.password=
 
+dao.factory=UM.malykhin.nure.db.DaoFactoryImpl
 dao.UM.malykhin.nure.db.UserDao = UM.malykhin.nure.db.HsqldbUserDao
