--- a/UM/src/main/webapp/WEB-INF/web.xml
+++ b/UM/src/main/webapp/WEB-INF/web.xml
@@ -10,9 +10,39 @@
         <servlet-class>UM.malykhin.nure.web.BrowseServlet</servlet-class>
     </servlet>
     
+	<servlet>
+        <servlet-name>Edit Servlet</servlet-name>
+        <servlet-class>UM.malykhin.nure.web.EditServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>Add Servlet</servlet-name>
+        <servlet-class>UM.malykhin.nure.web.AddServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>Details Servlet</servlet-name>
+        <servlet-class>UM.malykhin.nure.web.DetailsServlet</servlet-class>
+    </servlet>
+	
     <servlet-mapping>
         <servlet-name>Browse Servlet</servlet-name>
         <url-pattern>/browse</url-pattern>
+    </servlet-mapping>
+	
+	<servlet-mapping>
+        <servlet-name>Edit Servlet</servlet-name>
+        <url-pattern>/edit</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>Add Servlet</servlet-name>
+        <url-pattern>/add</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>Details Servlet</servlet-name>
+        <url-pattern>/details</url-pattern>
     </servlet-mapping>
 
 </web-app>   
